--- a/contact.html
+++ b/contact.html
@@ -4,18 +4,24 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="email to contact with Croissant Company"
+    />
     <link rel="stylesheet" href="/src/style.css" />
-    <title>Home</title>
+    <title>Contacts of Croissant Company</title>
   </head>
   <body>
     <h1>🥐 Croissant</h1>
     To contact croissant.com, please email us at
-    <a href="mailto:ahello@croissant.com">ahello@croissant.com</a>
+    <a href="mailto:ahello@croissant.com" title="email address"
+      >ahello@croissant.com</a
+    >
     for more info
     <div class="menu">
-      <a href="/">Homepage</a>
-      <a href="/photo.html">Photo</a>
-      <a href="contact.html">Contact</a>
+      <a title="Croissant Homepage" href="/">Homepage</a>
+      <a title="Croissant Photo" href="/photo.html">Photo</a>
+      <a title="Croissant Contacts" href="contact.html">Contact</a>
     </div>
   </body>
 </html>
