--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Croissant company is a company that makes delicious croissant"
+    />
     <link rel="stylesheet" href="/src/style.css" />
-    <title>Home</title>
+    <title>Croissant company</title>
   </head>
   <body>
     <h1>🥐 Croissant</h1>
@@ -15,9 +19,9 @@
       dough. Croissants are named for their historical crescent shape
     </p>
     <div class="menu">
-      <a href="/">Homepage</a>
-      <a href="/photo.html">Photo</a>
-      <a href="contact.html">Contact</a>
+      <a title="Croissant Homepage" href="/">Homepage</a>
+      <a title="Croissant Photo" href="/photo.html">Photo</a>
+      <a title="Croissant Contacts" href="contact.html">Contact</a>
     </div>
   </body>
 </html>
