--- a/photo.html
+++ b/photo.html
@@ -4,16 +4,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Photo of a delicious croissant made in croissant company"
+    />
     <link rel="stylesheet" href="/src/style.css" />
-    <title>Photo</title>
+    <title>Photo of a croissant - croissant company</title>
   </head>
   <body>
     <h1>🥐 Photo</h1>
-    <img src="/img/croissant-pic-4.jpg" alt="" />
+    <img alt="croissant image" src="/img/croissant-pic-4.jpg" />
     <div class="menu">
-      <a href="/">Homepage</a>
-      <a href="/photo.html">Photo</a>
-      <a href="contact.html">Contact</a>
+      <a title="Croissant Homepage" href="/">Homepage</a>
+      <a title="Croissant Photo" href="/photo.html">Photo</a>
+      <a title="Croissant Contacts" href="contact.html">Contact</a>
     </div>
   </body>
 </html>
